@@ -1,3 +1,12 @@
+January 13, 2006: Bugfixing continues:
+
+  - Use pygame.font.SysFont to locate Verdana.ttf on your system.
+  - Fix "surfaces must not be locked during blit" bug.
+  - Fix some cosmetic unit test failures.
+  - Added a background image.
+  - Made debug timings HUDs less intrusive.
+  - Added an ability to specify the desired video mode on the command line.
+
 January 8, 2006: After a week of intensive work, I released version 0.9.0.
 User-visible changes:
 
